change web Router to HashRouter

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
         myCube
       </div>
     </a>
-    <a href='/model'>3D Model</a>
-    <a href='/policy'>Policy</a>
-    <a href='/api'>API</a>
+    <a href='/#/model'>Model</a>
+    <a href='/#/policy'>Policy</a>
+    <a href='/#/api'>API</a>
   </div>
   <div id="root"></div>
 </body>
