--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
 
 <body>
   <div class='header'>
-    <a href='/'>
+    <a href='./#'>
       <div class="logo">
         <img src="icon.svg" alt="myCube Icon">
         myCube
       </div>
     </a>
-    <a href='/#/model'>Model</a>
-    <a href='/#/policy'>Policy</a>
-    <a href='/#/api'>API</a>
+    <a href='./#/model'>Model</a>
+    <a href='./#/policy'>Policy</a>
+    <a href='./#/api'>API</a>
   </div>
   <div id="root"></div>
 </body>
